k8s-istio-cluster/basic-implementation/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: demo
spec:
  selector:
    app: my-app
  ports:
  - name: http
    port: 80
    targetPort: 5678
